apps/roombasedsoundboard/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rmbsndb
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - soundboard.youllou.com
      secretName: rmbsndb-tls
  rules:
    - host: soundboard.youllou.com
      http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: rmbsndb-backend
                port:
                  number: 8000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: rmbsndb-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rmbsndb-frontend
                port:
                  number: 80
